--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
-  "name": "tmp",
-  "private": true,
+  "name": "grabcss",
   "version": "0.0.0",
+  "author": "grabss Inc.",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/grabss/grabcss.git"
+  },
   "type": "module",
   "scripts": {
     "dev": "vite",
