--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
+  "packageManager": "yarn@4.5.0",
   "devDependencies": {
     "typescript": "^5.5.3",
     "vite": "^5.4.8"
