--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "type": "git",
     "url": "https://github.com/grabss/grabcss.git"
   },
-  "devDependencies": {
-    "typescript": "^5.5.3"
-  }
+  "workspaces": [
+    "dev"
+  ]
 }
