--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "type": "git",
     "url": "https://github.com/grabss/grabcss.git"
   },
+  "files": [
+    "dist"
+  ],
   "workspaces": [
     "dev"
   ]
