--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "grabcss",
-  "version": "0.0.0",
-  "author": "grabss Inc.",
+  "version": "0.1.0",
+  "description": "A minimal, utility-first CSS framework for rapid UI development, provided and utilized by grabss Inc.",
   "license": "MIT",
+  "author": "grabss Inc.",
   "repository": {
     "type": "git",
     "url": "https://github.com/grabss/grabcss.git"
   },
+  "keywords": [
+    "css",
+    "postcss",
+    "css-framework",
+    "utility-first",
+    "minimal"
+  ],
   "files": [
     "dist"
   ],
