Chore: add style & fix exports

--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "utility-first",
     "minimal"
   ],
+  "style": "dist/grab.css",
   "files": [
     "dist"
   ],
   "exports": {
-    ".": "./dist"
+    ".": "./dist",
+    "./scss/*": "./dist/scss/*"
   },
   "workspaces": [
     "dev"
