--- a/dev/Dockerfile
+++ b/dev/Dockerfile
@@ -1,7 +1,7 @@
-FROM node:22.9.0-slim
+FROM node:22.13.1-slim
 
-RUN corepack enable yarn && \
-    corepack prepare yarn@4.5.0 --activate
+RUN corepack enable && corepack prepare pnpm@9.15.4 --activate
+RUN pnpm config set store-dir /tmp/pnpm/store
 
 RUN mkdir /grabcss
 WORKDIR /grabcss
