--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build:
       context: ..
       dockerfile: dev/Dockerfile
-    entrypoint: dev/docker-entrypoint.sh
+    command: /bin/bash -c 'yarn dev'
     tty: true
     stdin_open: true
     ports:
