Chore/update packages (#11)
* Chore: ignores

* Chore: update docker image

* Fix: docker entry point

* Chore: pnpm workspace

* Fix: gitignore

--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -1,3 +1,4 @@
+name: grabcss
 services:
   grabcss:
     image: grabcss
@@ -5,7 +6,7 @@ services:
     build:
       context: ..
       dockerfile: dev/Dockerfile
-    entrypoint: dev/docker-entrypoint.sh
+    command: /bin/bash -c 'yarn dev'
     tty: true
     stdin_open: true
     ports:
