--- a/package.json
+++ b/package.json
@@ -16,13 +16,40 @@
     "utility-first",
     "minimal"
   ],
-  "style": "dist/grab.css",
+  "type": "module",
+  "main": "./dist/grab.css",
+  "style": "./dist/grab.css",
   "exports": {
-    ".": "./dist",
-    "./scss/*": "./dist/scss/*"
+    ".": {
+      "import": "./dist/grab.css",
+      "require": "./dist/grab.css"
+    },
+    "./scss": "./src/styles/index.scss"
   },
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
+  "scripts": {
+    "dev": "vite dev",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "lint": "prettier --check . && eslint .",
+    "format": "prettier --write ."
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.28.0",
+    "@types/eslint": "^9.6.1",
+    "@types/node": "^22.7.6",
+    "eslint": "^9.12.0",
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "^3.3.3",
+    "rollup-plugin-copy": "^3.5.0",
+    "sass-embedded": "^1.80.1",
+    "the-new-css-reset": "^1.11.3",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.9.0",
+    "vite": "^6.3.5"
+  },
   "packageManager": "pnpm@10.12.1"
 }
