--- a/playground/package.json
+++ b/playground/package.json
@@ -9,12 +9,11 @@
   },
   "devDependencies": {
     "@types/node": "^22.7.6",
+    "grabcss": "workspace:*",
     "sass-embedded": "^1.80.1",
+    "the-new-css-reset": "^1.11.3",
     "typescript": "^5.5.3",
     "vite": "^6.3.5"
-  },
-  "dependencies": {
-    "grabcss": "workspace:*"
   },
   "packageManager": "pnpm@10.12.1"
 }
