--- a/package.json
+++ b/package.json
@@ -1,28 +1,23 @@
 {
-  "name": "grabcss",
-  "version": "0.3.0",
-  "description": "A minimal, utility-first CSS framework for rapid UI development.",
+  "name": "@grabcss/monorepo",
   "license": "MIT",
   "author": "grabss Inc.",
-  "homepage": "https://grabss.co.jp",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/grabss/grabcss.git"
+  "private": true,
+  "scripts": {
+    "lint": "prettier --check . && eslint .",
+    "format": "prettier --write .",
+    "dev": "pnpm -C playground dev",
+    "build": "pnpm -C packages/grabcss build",
+    "build:playground": "pnpm -C packages/grabcss build && pnpm -C playground build",
+    "preview:playground": "pnpm -C playground preview"
   },
-  "keywords": [
-    "css",
-    "postcss",
-    "css-framework",
-    "utility-first",
-    "minimal"
-  ],
-  "style": "dist/grab.css",
-  "exports": {
-    ".": "./dist",
-    "./scss/*": "./dist/scss/*"
+  "devDependencies": {
+    "@eslint/js": "^9.28.0",
+    "@types/eslint": "^9.6.1",
+    "eslint": "^9.12.0",
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "^3.3.3",
+    "typescript-eslint": "^8.9.0"
   },
-  "files": [
-    "dist"
-  ],
   "packageManager": "pnpm@10.12.1"
 }
