--- a/packages/grabcss/package.json
+++ b/packages/grabcss/package.json
@@ -7,7 +7,8 @@
   "homepage": "https://grabss.co.jp",
   "repository": {
     "type": "git",
-    "url": "https://github.com/grabss/grabcss.git"
+    "url": "https://github.com/grabss/grabcss.git",
+    "directory": "packages/grabcss"
   },
   "keywords": [
     "css",
