--- a/package.json
+++ b/package.json
@@ -5,20 +5,15 @@
   "author": "grabss Inc.",
   "private": true,
   "scripts": {
-    "lint": "prettier --check . && eslint .",
-    "format": "prettier --write .",
+    "lint": "biome check .",
+    "format": "biome format --write .",
     "dev": "pnpm -C playground dev",
     "build": "pnpm -C packages/grabcss build",
     "build:playground": "pnpm -C packages/grabcss build && pnpm -C playground build",
     "preview:playground": "pnpm -C playground preview"
   },
   "devDependencies": {
-    "@eslint/js": "^9.28.0",
-    "@types/eslint": "^9.6.1",
-    "eslint": "^9.12.0",
-    "eslint-config-prettier": "^9.1.0",
-    "prettier": "^3.3.3",
-    "typescript-eslint": "^8.9.0"
+    "@biomejs/biome": "^2.0.0"
   },
   "packageManager": "pnpm@10.12.1"
 }
