--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "private": true,
   "scripts": {
     "lint": "biome check .",
-    "format": "biome format --write .",
+    "lint:fix": "biome check --write .",
+    "lint:ci": "biome ci .",
     "dev": "pnpm -C playground dev",
     "build": "pnpm -C packages/grabcss build",
     "build:playground": "pnpm -C packages/grabcss build && pnpm -C playground build",
