--- a/packages/grabcss/package.json
+++ b/packages/grabcss/package.json
@@ -4,7 +4,7 @@
   "description": "A minimal, utility-first CSS framework for rapid UI development.",
   "license": "MIT",
   "author": "grabss Inc.",
-  "homepage": "https://grabss.co.jp",
+  "homepage": "https://grabss.github.io/grabcss",
   "repository": {
     "type": "git",
     "url": "https://github.com/grabss/grabcss.git",
